网络编程图片

--- a/Linux/网络编程.md
+++ b/Linux/网络编程.md
@@ -94,7 +94,7 @@ const char *inet_ntop(int af, const void *src, char *dst, socklen_t size);
 
 strcut sockaddr 很多网络编程函数诞生早于IPv4协议，那时候都使用的是sockaddr结构体。为了向前兼容IPv6，现在sockaddr退化成了（void *）的作用，传递一个地址给函数，至于这个函数是sockaddr_in还是sockaddr_in6，由地址族确定，然后函数内部再强制类型转化为所需的地址类型
 
-![image-20240229172624472](..\assets\image-20240229172624472.png)
+![image-20240229172624472](./assets/image-20240229172624472.png)
 
 ```c
 // IPv4
@@ -134,7 +134,7 @@ socket本身有“插座”的意思，在Linux环境下，用于表示进程间
 
 在网络通信中，套接字一定是成对出现的。一端的发送缓冲区对应对端的接收缓冲区。我们使用同一个文件描述符索发送缓冲区和接收缓冲区。
 
-![image-20240229221546987](..\assets\image-20240229221546987.png)
+![image-20240229221546987](./assets/image-20240229221546987.png)
 
 ```c
 #include <sys/types.h> /* See NOTES */
@@ -197,13 +197,13 @@ int connect(int sockfd, const struct sockaddr *addr, socklen_t addrlen);
 
 #### TCP时序图
 
-![image-20240302130837058](..\assets\image-20240302130837058.png)
+![image-20240302130837058](./assets/image-20240302130837058.png)
 
 #### C/S模型-TCP
 
 下图是基于TCP协议的客户端/服务器程序的一般流程：
 
-![image-20240301174748041](..\assets\image-20240301174748041.png)
+![image-20240301174748041](./assets/image-20240301174748041.png)
 
 服务器调用socket()、bind()、listen()完成初始化后，调用accept()阻塞等待，处于监听端口的状态，客户端调用socket()初始化后，调用connect()发出SYN段并阻塞等待服务器应答，服务器应答一个SYN-ACK段，客户端收到后从connect()返回，同时应答一个ACK段，服务器收到后从accept()返回。TCP连接建立成功
 
@@ -758,7 +758,7 @@ int main(void) {
 
 #### TCP状态转换
 
-![image-20240506193115473](..\assets\image-20240506193115473.png)
+![image-20240506193115473](./assets/image-20240506193115473.png)
 
 当一方处于TIME_WAIT状态时，假设是客户端，需要等待2MSL时长才能关闭，理由是服务端需要接收到客户端发来的ACK，才能从LAST_ACK状态转为CLOSED状态，但ACK可能丢失。如果客户端已经关闭，就无法再次接收到服务端发送的FIN请求了，导致服务端无法关闭。因此，MSL为报文段被丢弃前在网络的最长时间，保证服务端重发FIN请求时客户端仍未关闭，一般设置为30s。
 
@@ -1035,7 +1035,7 @@ struct pollfd {
 }
 ```
 
-![image-20240517231439815](..\assets\image-20240517231439815.png)
+![image-20240517231439815](./assets/image-20240517231439815.png)
 
 ```c
 // polld
