--- a/工作/杂项.md
+++ b/工作/杂项.md
@@ -59,3 +59,19 @@ do {
 } while (0);
 ```
 
+#### 判断文件是否存在
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <unistd.h>
+
+int main()
+{
+    // 文件存在则返回0，否则返回-1
+	printf("%d\n", access("./mysql/test.c", F_OK));
+	printf("%d\n", access("./mysql/test.cpp", F_OK));
+	return 0;
+}
+```
+
