--- a/工作/杂项.md
+++ b/工作/杂项.md
@@ -75,3 +75,21 @@ int main()
 }
 ```
 
+#### \r用法
+
+1.   适配windows系统，和\n一起使用
+
+     在某些操作系统（如 Windows）中，与换行符（\n）一起使用（即\r\n）来表示文本行的结束
+
+2.   实时更新输出
+
+     在用作输出时，当 `\r` 被处理时，光标被移动到当前行的开头，后续输出的内容将覆盖这一行的现有内容。这种特性在命令行界面和某些实时输出场景中非常有用。例如，可以用来显示进度条或实时更新信息，而不必在每次输出时都换到新的一行
+
+```c
+for (int i = 0; i <= 100; i++) {
+    printf("\rProgress: %d%%", i);	// 输出百分号，前面需要加个%用于
+    fflush(stdout);  // 刷新输出缓冲区以确保即时显示
+    sleep(1);        // 模拟一些处理时间
+}
+```
+
