--- a/工作/杂项.md
+++ b/工作/杂项.md
@@ -41,6 +41,31 @@ int main()
 }
 ```
 
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <unistd.h>
+
+
+int main()
+{
+	char cmd[128]= {0};
+	#define ECHO_CMD(cmd, format, ...) \
+    do { \
+        memset(cmd, 0, sizeof(cmd)); \
+        snprintf(cmd, sizeof(cmd), "echo \"" format "\" >> output", __VA_ARGS__); \
+        system(cmd); \
+    } while (0)
+
+	ECHO_CMD(cmd, "%s", "enter wwapi_wireless_wlan_basic");
+
+}
+
+```
+
+
+
 #### do while(0)
 
 用于多个if条件递进判断，如果某个条件不满足就不再执行后续算法
@@ -90,6 +115,24 @@ for (int i = 0; i <= 100; i++) {
     printf("\rProgress: %d%%", i);	// 输出百分号，前面需要加个%用于
     fflush(stdout);  // 刷新输出缓冲区以确保即时显示
     sleep(1);        // 模拟一些处理时间
+}
+```
+
+#### 需要指针但不想要malloc
+
+```c
+struct test_struct
+{
+    int data;
+};
+
+void fun()
+{
+    struct test_struct test = {0};
+    struct test_struct *test_point = NULL;
+
+    // 函数出栈时由内核自动回收内存
+    test_point = (struct test_struct *)test;
 }
 ```
 
