--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -2363,14 +2363,15 @@ int main(void) {
 
 #### 简介
 
-本文主要介绍线程的基本管控，包括线程的发起、等待、异常条件下如何等待以及后台运作等基础操作
+本文主要介绍C++11下的线程的基本管控，包括线程的发起、等待、异常条件下如何等待以及后台运作等基础操作
 
 #### 线程发起
 
 顾名思义，线程发起就是启动一个线程，C++11标准统一了线程操作，可以在定义一个线程变量后，该变量启动线程执行回调逻辑。如下即可发起一个线程
 
 ```c++
-void thread_work(std::string str) {
+void thread_work(std::string str)
+{
     std::cout << "str is " << str << std::endl;
 }
 // 通过()初始化并启动一个线程
@@ -2389,4 +2390,118 @@ std::thread t1(thread_work, "hello");
 // 主线程等待子线程退出
 t1.join();
 ```
+
+#### 仿函数作为参数
+
+当我们用仿函数作为参数传递给线程时，也可以达到启动线程执行某种操作的含义
+
+```c
+class background_task
+{
+public:
+	void operator()(string str)
+	{
+		cout << "str is " << str << endl;
+	}
+};
+
+int main()
+{
+    // 创建了 background_task 类的一个实例，这个实例被用作线程的可调用对象
+    // 线程在启动时会调用这个实例的 operator() 方法，并将 "hello" 字符串作为参数传递给它
+	thread t1(background_task(), "hello");
+	t1.join();
+}
+```
+
+#### lambda表达式作为参数
+
+```c
+int main()
+{
+	thread t1([](string str) {
+		cout << "str is " << endl; 
+	}, "hello");
+	t1.join();
+}
+```
+
+#### 线程detach
+
+线程允许采用分离的方式在后台独自运行，调用线程不等待被调用线程，资源在后台线程完成后自动释放
+
+```c
+#include <iostream>
+#include <thread>
+#include <chrono>
+
+using namespace std;
+
+void threadFunction()
+{
+	for (int i = 0; i < 5; ++i)
+	{
+		cout << "Thread running: " << i << endl;
+		this_thread::sleep_for(chrono::seconds(1));
+	}
+}
+
+int main()
+{
+	thread t(threadFunction);
+	t.detach();
+
+	cout << "Main thread will sleep for 2 seconds" << endl;
+	this_thread::sleep_for(chrono::seconds(2));
+
+	cout << "Main thread ending" << endl;
+	return 0;
+}
+```
+
+#### 异常处理
+
+当我们启动一个线程后，如果主线程产生崩溃，会导致子线程也会异常退出，就是调用terminate，如果子线程在进行一些重要的操作比如将充值信息入库等，丢失这些信息是很危险的。所以常用的做法是捕获异常，并且在异常情况下保证子线程稳定运行结束后，主线程抛出异常结束运行
+
+```c
+#include <iostream>
+#include <thread>
+#include <chrono>
+
+using namespace std;
+
+class thread_guard
+{
+private:
+	thread &_t;
+
+public:
+	explicit thread_guard(thread &t) : _t(t) {}
+	~thread_guard()
+	{
+		// joinable 检查一个线程对象是否可以被 join
+		if (_t.joinable())
+		{
+			_t.join();
+		}
+	}
+	thread_guard(thread_guard const &) = delete;
+	thread_guard &operator=(thread_guard const &) = delete;
+};
+
+int main()
+{
+	thread t([]() {
+		for (int i = 0; i < 5; ++i)
+		{
+			cout << "Thread running: " << i << endl;
+			this_thread::sleep_for(chrono::seconds(1));
+		}
+	});
+	thread_guard g(t);
+	return 0;
+}
+```
+
+#### 
 
