--- a/工作/杂项.md
+++ b/工作/杂项.md
@@ -136,3 +136,32 @@ void fun()
 }
 ```
 
+#### printf输出颜色
+
+```c
+#include <stdio.h>
+
+int main() {
+    // ANSI 转义码用于设置文本颜色
+    printf("\033[31m这是红色的字符串\033[0m\n"); // 31是红色，0是重置颜色
+    return 0;
+}
+```
+
+-   `\033[31m` 是设置文本为红色的转义序列：
+    -   `\033` 是转义字符（ESC）
+
+    -   `[31m` 表示设置前景色为红色
+
+-   `\033[0m` 是重置颜色的转义序列，确保之后的文本不会受到影响
+
+其他前景色
+
+-   黑色：`30`
+-   红色：`31`
+-   绿色：`32`
+-   黄色：`33`
+-   蓝色：`34`
+-   紫色：`35`
+-   青色：`36`
+-   白色：`37`
