--- a/项目/安全传输平台/文档.md
+++ b/项目/安全传输平台/文档.md
@@ -1,3 +1,17 @@
-软件架构
+#### 软件架构
 
 ![image-20241014224512189](./assets/image-20241014224512189.png)
+
+#### 数据库配置
+
+1. 关闭防火墙
+
+![image-20241015230354124](./assets/image-20241015230354124.png)
+
+![image-20241015230429489](./assets/image-20241015230429489.png)
+
+![image-20241015230514722](./assets/image-20241015230514722.png)
+
+![image-20241015230541481](./assets/image-20241015230541481.png)
+
+![image-20241015230741640](./assets/image-20241015230741640.png)
