--- a/工作/杂项.md
+++ b/工作/杂项.md
@@ -165,3 +165,14 @@ int main() {
 -   紫色：`35`
 -   青色：`36`
 -   白色：`37`
+
+#### tftpd64用法
+
+1.   打开tftpd64，选择对应文件夹和对应ip，这时候tftpd服务已经启用了
+2.   linux客户端文件上传和下载
+
+```bash
+tftp ip -gr example # 电脑到开发板
+tftp ip -pr example # 开发板到电脑
+```
+
