--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -858,6 +858,105 @@ int main(void) {
 }
 ```
 
+#### MQ——消息队列
+
+##### 简介
+
+消息队列（Message Queue,简称MQ）是由内核管理的消息链接表，由消息队列标识符进行标识，标识符简称队列ID。消息队列提供了进程之间单向传送数据的方法，每个消息包含有一个正的长整型类型的数据段、一个非负的长度以及实际数据字节数（对应于长度），消息队列总字节数是有上限的，系统上消息队列总数也有上限
+
+MQ传递的是消息，也就是进程间需要传递的数据，系统内核中有很多MQ，这些MQ采用链表实现并由系统内核维护，每个MQ用消息队列描述符（qid)来区分，每个MQ 的pid具有唯一性。如下图：在进程间通信时，一个进程A将消息加到由内核管理的MQ 末端，另一个进程B在MQ中获取消息（获取信息时不遵循先进先出的规则，也可以按照消息类型字段获取消息）：
+
+![img](./assets/1642296-20230313144730164-930684266.jpg)
+
+##### 消息队列使用的函数
+
+消息队列（MQ）在进程间通信的操作分为以下四个步骤：
+
+-   创建MQ
+-   发送message
+-   接收message
+-   删除MQ
+
+```c
+#include <sys/types.h>
+#include <sys/ipc.h>
+
+/**
+  * @brief  根据pathname指定的文件或目录的索引节点号和proj_id计算并返回一个key_t类型的ID值
+  * @param  pathname    系统中必须存在的文件或文件夹的路径
+  * @param	proj_id		用户指定的一个子序号，它是一个8bit的整数，取值范围为1~255
+  * @retval 成功返回key_t类型的ID值，失败返回-1
+  */
+key_t ftok(const char *pathname, int proj_id);
+
+#include <sys/msg.h>
+
+/**
+  * @brief  创建一个新队列或者打开一个现有队列，获取该共享内存段的标识码
+  * @param  key    ftok返回的ID值
+  * @param	msgflg	msgflg是创建标志，可选值如下
+  			IPC_CREAT	01000		不存在则创建 
+			IPC_EXCL	02000		存在则报错
+			IPC_NOWAIT	04000		如果等待则报错
+  * @retval 成功返回一个非负整数，即该共享内存段的标识码，失败返回-1
+  */
+int msgget(key_t key, int msgflg);
+
+/**
+  * @brief  将新消息添加到队列尾端，也就是发送一条消息，必须要有写消息队列的权限
+  * @param  msqid    由msgget函数返回的消息队列 ID
+  * @param	msgp	msgflg是创建标志，可选值如下
+  * @param	msgsz	msgp的长度
+  * @param	msgflg	控制着当前消息队列已满或系统上限时将要发生的事情，设置为IPC_NOWAIT表示队列已满不等待
+  * @retval 成功返回0，失败返回-1
+  */
+int msgsnd(int msqid, const void *msgp, size_t msgsz, int msgflg);
+
+// msgp参考类型定义如下
+struct msgbuf {
+    long mtype;       /* message type, must be > 0 */
+    char mtext[1];    /* message data */
+};
+
+/**
+  * @brief  从队列中取消息
+  * @param  msqid    由msgget函数返回的消息队列 ID
+  * @param	msgp	msgflg是创建标志，可选值如下
+  * @param	msgsz	msgp的长度
+  * @param	msgtyp	消息的类型，它可以指定想要哪一种消息，可以实现接收优先级的简单形式
+  * @param	msgflg	控制着当前消息队列已满或系统上限时将要发生的事情，设置为IPC_NOWAIT表示队列已满不等待
+  * @retval 成功返回实际放到接收缓冲区里去的个数，失败返回-1
+  */
+ssize_t msgrcv(int msqid, void *msgp, size_t msgsz, long msgtyp, int msgflg);
+
+/**
+  * @brief  从队列中取消息
+  * @param  msqid    由msgget函数返回的消息队列 ID
+  * @param	cmd		该参数指定对msqid指定的队列要执行的命令，可取值如下：
+  			IPC_STAT: 获取消息队列的状态信息并存入 buf。
+            IPC_SET: 设置消息队列的状态信息，来自 buf。
+            IPC_RMID: 删除消息队列
+  * @param	buf		指向 msqid_ds 结构的指针，用于存储或设置消息队列的状态信息
+  * @retval 成功返回0，失败返回-1
+  */
+int msgctl(int msqid, int cmd, struct msqid_ds *buf);
+
+ struct msqid_ds {
+     struct ipc_perm msg_perm;   /* Ownership and permissions */
+     time_t          msg_stime;  /* Time of last msgsnd(2) */
+     time_t          msg_rtime;  /* Time of last msgrcv(2) */
+     time_t          msg_ctime;  /* Time of creation or last
+                                              modification by msgctl() */
+     unsigned long   msg_cbytes; /* # of bytes in queue */
+     msgqnum_t       msg_qnum;   /* # number of messages in queue */
+     msglen_t        msg_qbytes; /* Maximum # of bytes in queue */
+     pid_t           msg_lspid;  /* PID of last msgsnd(2) */
+     pid_t           msg_lrpid;  /* PID of last msgrcv(2) */
+ };
+```
+
+
+
 ### 信号
 
 #### 简介
