--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -906,7 +906,7 @@ int msgget(key_t key, int msgflg);
   * @brief  将新消息添加到队列尾端，也就是发送一条消息，必须要有写消息队列的权限
   * @param  msqid    由msgget函数返回的消息队列 ID
   * @param	msgp	msgflg是创建标志，可选值如下
-  * @param	msgsz	msgp的长度
+  * @param	msgsz	msgp里面数据部分的长度
   * @param	msgflg	控制着当前消息队列已满或系统上限时将要发生的事情，设置为IPC_NOWAIT表示队列已满不等待
   * @retval 成功返回0，失败返回-1
   */
@@ -924,6 +924,9 @@ struct msgbuf {
   * @param	msgp	msgflg是创建标志，可选值如下
   * @param	msgsz	msgp的长度
   * @param	msgtyp	消息的类型，它可以指定想要哪一种消息，可以实现接收优先级的简单形式
+  			0 接收所有类型的消息。
+			正整数 接收指定类型的消息（例如，1 表示接收类型为 1 的消息）。
+			负整数 接收小于或等于该值绝对值的最大类型的消息。
   * @param	msgflg	控制着当前消息队列已满或系统上限时将要发生的事情，设置为IPC_NOWAIT表示队列已满不等待
   * @retval 成功返回实际放到接收缓冲区里去的个数，失败返回-1
   */
@@ -955,7 +958,148 @@ int msgctl(int msqid, int cmd, struct msqid_ds *buf);
  };
 ```
 
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/msg.h>
+#include <unistd.h>
 
+#define PROJ_ID 'w'			 // 项目 ID
+#define MAX_TEXT 512		 // 消息内容的最大长度
+#define PATH_NAME "msgqueue" // 文件路径，用于生成键值
+
+// 定义消息结构
+typedef struct
+{
+	long msg_type; // 消息类型，必须是长整型
+	struct People
+	{
+		int age;
+		char name[20];
+	} person;
+} message;
+
+int main(void)
+{
+	system("touch " PATH_NAME);
+
+	// 使用 ftok 生成唯一键值
+	key_t key = ftok(PATH_NAME, PROJ_ID);
+	if (key == -1)
+	{
+		perror("ftok");
+		exit(EXIT_FAILURE);
+	}
+
+	// 创建消息队列，0660 新创建消息队列的权限
+	int msgid = msgget(key, IPC_CREAT | 0660);
+	if (msgid == -1)
+	{
+		perror("msgget");
+		exit(EXIT_FAILURE);
+	}
+
+	message msg = {0};
+	// 输入人员信息并发送消息
+	while (1)
+	{
+		printf("Enter age (or -1 to exit): ");
+		scanf("%d", &msg.person.age);
+		if (msg.person.age == -1)
+		{
+			break; // 输入 -1 退出循环
+		}
+		printf("Enter name: ");
+		scanf("%s", msg.person.name);
+
+		msg.msg_type = 1; // 设置消息类型
+		// 发送消息
+		if (msgsnd(msgid, &msg, sizeof(msg.person), 0) == -1)
+		{
+			perror("msgsnd");
+		}
+		else
+		{
+			printf("Sent: Age: %d, Name: %s\n", msg.person.age, msg.person.name);
+		}
+	}
+
+	// 删除消息队列
+	if (msgctl(msgid, IPC_RMID, NULL) == -1)
+	{
+		perror("msgctl");
+		exit(EXIT_FAILURE);
+	}
+
+	return 0;
+}
+```
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/msg.h>
+#include <unistd.h>
+
+#define PROJ_ID 'w'			 // 项目 ID
+#define MAX_TEXT 512		 // 消息内容的最大长度
+#define PATH_NAME "msgqueue" // 文件路径，用于生成键值
+
+// 定义消息结构
+typedef struct
+{
+	long msg_type; // 消息类型，必须是长整型
+	struct People
+	{
+		int age;
+		char name[20];
+	} person;
+} message;
+
+int main(void)
+{
+	system("touch " PATH_NAME);
+	// 使用 ftok 生成唯一键值
+	key_t key = ftok(PATH_NAME, PROJ_ID);
+	if (key == -1)
+	{
+		perror("ftok");
+		exit(EXIT_FAILURE);
+	}
+
+	// 获取消息队列标识符
+	int msgid = msgget(key, IPC_CREAT | 0660);
+	if (msgid == -1)
+	{
+		perror("msgget");
+		exit(EXIT_FAILURE);
+	}
+
+	message msg;
+
+	// 循环接收消息
+	while (1)
+	{
+		// 接收消息
+		if (msgrcv(msgid, &msg, sizeof(msg.person), 1, 0) == -1)
+		{
+			perror("msgrcv");
+			exit(EXIT_FAILURE);
+		}
+
+		// 打印接收到的消息
+		printf("Received: Age: %d, Name: %s\n", msg.person.age, msg.person.name);
+	}
+
+	return 0;
+}
+```
 
 ### 信号
 
